M.G. Dragesku summary is added
New file:
	archmages/01.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <BODY>
     <H1>Great Mages Guild</H1>
     <p>
+        <a href="">History of Great Mages Guild</a><br>
+        <a href="">List of global events</a>
+    </p>
+    <p>
         <h3>ArchMages</h3>
         <ol>
-            <li>Mirela Gabriela Dragesku</li>
-            <li>Bart Kay Alderink</li>
+            <li><a href="archmages/01.html">Mirela Gabriela Dragesku</a></li>
+            <li><a href="archmages/02.html">Bart Kay Alderink</a></li>
             <li>Josephine Katrin Melanson</li>
             <li>Lars Sten Petersen</li>
             <li>Hannah Helda Petersen</li>
@@ -30,12 +34,13 @@
     <p>
         <h3>Secondary Characters</h3>
         <ul>
-            <li>Sophie Logan</li>
+            <li>Vlad Dragesku - father of M. G. Dragesku</li>
+            <li>Valerian Dragesku - M. G. Dragesku's brother</li>
+            <li>Sophie Logan - P. R. Logans's wife</li>
         </ul>
     </p>
     <p>
-        <a href="">History of Great Mages Guild</a><br>
-        <a href="">List of global events</a>
+        <h3>Mentioned Organisation</h3>
     </p>
 </BODY>
 </HTML>
