--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ol>
             <li><a href="archmages/01.html">Mirela Gabriela Dragesku</a></li>
             <li><a href="archmages/02.html">Bart Kay Alderink</a></li>
-            <li>Josephine Katrin Melanson</li>
+            <li><a href="archmages/03.html">Josephine Katrin Melanson</a></li>
             <li>Lars Sten Petersen</li>
             <li>Hannah Helda Petersen</li>
             <li>Lukas Martin Hoffe</li>
