L.S. Petersen summary is added
New file:
	archmages/05.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="archmages/01.html">Mirela Gabriela Dragesku</a></li>
             <li><a href="archmages/02.html">Bart Kay Alderink</a></li>
             <li><a href="archmages/03.html">Josephine Katrin Melanson</a></li>
-            <li>Lars Sten Petersen</li>
+            <li><a href="archmages/04.html">Lars Sten Petersen</a></li>
             <li>Hannah Helda Petersen</li>
             <li>Lukas Martin Hoffe</li>
             <li>Lina Birgit Hermanson</li>
