--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="archmages/02.html">Bart Kay Alderink</a></li>
             <li><a href="archmages/03.html">Josephine Katrin Melanson</a></li>
             <li><a href="archmages/04.html">Lars Sten Petersen</a></li>
-            <li>Hannah Helda Petersen</li>
+            <li><a href="archmages/05.html">Hannah Helda Petersen</a></li>
             <li>Lukas Martin Hoffe</li>
             <li>Lina Birgit Hermanson</li>
             <li>Zdravko Cenek Ganchev</li>
