L. M. Hoffe summary is added
New file:
	archmages/06.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="archmages/03.html">Josephine Katrin Melanson</a></li>
             <li><a href="archmages/04.html">Lars Sten Petersen</a></li>
             <li><a href="archmages/05.html">Hannah Helda Petersen</a></li>
-            <li>Lukas Martin Hoffe</li>
+            <li><a href="archmages/06.html">Lukas Martin Hoffe</a></li>
             <li>Lina Birgit Hermanson</li>
             <li>Zdravko Cenek Ganchev</li>
             <li>Liliana Pavlina Witkowsky</li>
