L.B. Hermanson summary is added
New file:
	archmages/07.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="archmages/04.html">Lars Sten Petersen</a></li>
             <li><a href="archmages/05.html">Hannah Helda Petersen</a></li>
             <li><a href="archmages/06.html">Lukas Martin Hoffe</a></li>
-            <li>Lina Birgit Hermanson</li>
+            <li><a href="archmages/07.html">Lina Birgit Hermanson</a></li>
             <li>Zdravko Cenek Ganchev</li>
             <li>Liliana Pavlina Witkowsky</li>
             <li>Armand Jerome Dejarden</li>
