--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="archmages/05.html">Hannah Helda Petersen</a></li>
             <li><a href="archmages/06.html">Lukas Martin Hoffe</a></li>
             <li><a href="archmages/07.html">Lina Birgit Hermanson</a></li>
-            <li>Zdravko Cenek Ganchev</li>
+            <li><a href="archmages/08.html">Zdravko Cenek Ganchev</a></li>
             <li>Liliana Pavlina Witkowsky</li>
             <li>Armand Jerome Dejarden</li>
             <li>Cler Lorna McAlister</li>
