L.P. Witkowsky summary is added
New file:
	archmages/09.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="archmages/06.html">Lukas Martin Hoffe</a></li>
             <li><a href="archmages/07.html">Lina Birgit Hermanson</a></li>
             <li><a href="archmages/08.html">Zdravko Cenek Ganchev</a></li>
-            <li>Liliana Pavlina Witkowsky</li>
+            <li><a href="archmages/09.html">Liliana Pavlina Witkowsky</a></li>
             <li>Armand Jerome Dejarden</li>
             <li>Cler Lorna McAlister</li>
             <li>Philip Renard Logan</li>
