A.J. Dejardin summary is added
New file:
	archmages/10.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="archmages/07.html">Lina Birgit Hermanson</a></li>
             <li><a href="archmages/08.html">Zdravko Cenek Ganchev</a></li>
             <li><a href="archmages/09.html">Liliana Pavlina Witkowsky</a></li>
-            <li>Armand Jerome Dejarden</li>
+            <li><a href="archmages/10.html">Armand Jerome Dejardin</a></li>
             <li>Cler Lorna McAlister</li>
             <li>Philip Renard Logan</li>
             <li>Korali Cristine Delori</li>
