C.L. McAlister summary is added
New file:
	archmages/11.html

Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="archmages/08.html">Zdravko Cenek Ganchev</a></li>
             <li><a href="archmages/09.html">Liliana Pavlina Witkowsky</a></li>
             <li><a href="archmages/10.html">Armand Jerome Dejardin</a></li>
-            <li>Cler Lorna McAlister</li>
+            <li><a href="archmages/11.html">Cler Lorna McAlister</a></li>
             <li>Philip Renard Logan</li>
             <li>Korali Cristine Delori</li>
             <li>Gernot Hartmann Frei</li>
