P.R. Logan summary is added
New file:
	archmages/12.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="archmages/09.html">Liliana Pavlina Witkowsky</a></li>
             <li><a href="archmages/10.html">Armand Jerome Dejardin</a></li>
             <li><a href="archmages/11.html">Cler Lorna McAlister</a></li>
-            <li>Philip Renard Logan</li>
+            <li><a href="archmages/12.html">Philip Renard Logan</a></li>
             <li>Korali Cristine Delori</li>
             <li>Gernot Hartmann Frei</li>
         </ol>
