Added a bunch of additional characters
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
     <p>
         <h3>Secondary Characters</h3>
         <ul>
-            <li>Vlad Dragesku - father of M. G. Dragesku</li>
-            <li>Valerian Dragesku - M. G. Dragesku's brother</li>
-            <li>Sophie Logan - P. R. Logans's wife</li>
+            <li><em>Vlad Dragesku</em> - father of M.G. Dragesku</li>
+            <li><em>Valerian Dragesku</em> - M.G. Dragesku's brother</li>
+            <li><em>Essi Sonja Saaru</em> - Misunderstood sorceress who was curious about dark magic.</li>
+            <li><em>Alexander Adrian McAlister</em> - was the only living male heir of McAlister clan who became druggie because of L.P. Witkowskaya.</li>
+            <li><em>Vincent Tibodo</em> and <em>Jacques Larivier</em> - close friends of A.J. Dejardin and talented mages.</li>
+            <li><em>Sophie Logan</em> - P.R. Logans's wife</li>
+            <li><em>Timo Philip Logan</em> - P.R. Logan's son</li>
         </ul>
     </p>
     <p>
-        <h3>Mentioned Organisation</h3>
+        <h3>Mentioned Organisations</h3>
     </p>
 </BODY>
 </HTML>
