Added list of mentioned organisations
To be expanded

Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul>
             <li><em>Vlad Dragesku</em> - father of M.G. Dragesku</li>
             <li><em>Valerian Dragesku</em> - M.G. Dragesku's brother</li>
-            <li><em>Essi Sonja Saaru</em> - Misunderstood sorceress who was curious about dark magic.</li>
+            <li><em>Essi Sonja Saari</em> - Misunderstood sorceress who was curious about dark magic.</li>
             <li><em>Alexander Adrian McAlister</em> - was the only living male heir of McAlister clan who became druggie because of L.P. Witkowskaya.</li>
             <li><em>Vincent Tibodo</em> and <em>Jacques Larivier</em> - close friends of A.J. Dejardin and talented mages.</li>
             <li><em>Sophie Logan</em> - P.R. Logans's wife</li>
@@ -45,6 +45,19 @@
     </p>
     <p>
         <h3>Mentioned Organisations</h3>
+        <ul>
+            <li>
+                Tribunal
+                <ul>
+                    <li>Temple</li>
+                    <li>Secret police</li>
+                </ul>
+            </li>
+            <li>McAlister blood clan</li>
+            <li>Dragesku clan</li>
+            <li>Chaos clan</li>
+            <li>True Chaos clan</li>
+        </ul>
     </p>
 </BODY>
 </HTML>
