K.C. Delori summary is added
New file:
	archmages/13.html

Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="archmages/10.html">Armand Jerome Dejardin</a></li>
             <li><a href="archmages/11.html">Cler Lorna McAlister</a></li>
             <li><a href="archmages/12.html">Philip Renard Logan</a></li>
-            <li>Korali Cristine Delori</li>
+            <li><a href="archmages/13.html">Korali Cristine Delori</a></li>
             <li>Gernot Hartmann Frei</li>
         </ol>
     </p>
