G.H. Frei summary is added
New file:
	archmages/14.html

Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="archmages/11.html">Cler Lorna McAlister</a></li>
             <li><a href="archmages/12.html">Philip Renard Logan</a></li>
             <li><a href="archmages/13.html">Korali Cristine Delori</a></li>
-            <li>Gernot Hartmann Frei</li>
+            <li><a href="archmages/14.html">Gernot Hartmann Frei</a></li>
         </ol>
     </p>
     <p>
