Global list of events is assembled
New file:
	chronicles/global.html
Modified:
	index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 <BODY>
     <H1>Great Mages Guild</H1>
-    <p>
+    <p> 
+        <h3>Chronicles</h3>
         <a href="">History of Great Mages Guild</a><br>
-        <a href="">List of global events</a>
+        <a href="chronicles/global.html">List of global events</a>
     </p>
     <p>
         <h3>ArchMages</h3>
