Four new events in global timeline
Modified:
	chronicles/global.html

--- a/chronicles/global.html
+++ b/chronicles/global.html
@@ -38,6 +38,11 @@
             <li><em>January 1</em> - <strong>Bart Kay Alderink</strong> became the ArchMage</li>
         </ul>
 
+        <li>4484</li>
+        <ul>
+            <li><em>November 30</em> - <strong>B. K. Alderink</strong> discovered how to produce light magical way.</li>
+        </ul>
+
         <li>4497</li>
         <ul>
             <li><em>February 24</em> - <strong>Lars Sten Petersen</strong> was born</li>
@@ -54,7 +59,7 @@
             <li><em>April 23</em> - <strong>Lucas Martin Hoffe</strong> was born</li>
         </ul>
 
-        <li>4528</li>
+        <li>4529</li>
         <ul>
             <li><em>March 9</em> - <strong>Hannah Helda Petersen</strong> was born</li>
         </ul>
@@ -76,7 +81,7 @@
             <li><em>March 1</em> - <strong>Hannah Helda Petersen</strong> became the ArchMage</li>
         </ul>
 
-        <li>4545</li>
+        <li>4556</li>
         <ul>
             <li><em>June 22</em> - <strong>Zdravko Cenek Ganchev</strong> was born</li>
         </ul>
@@ -90,6 +95,21 @@
         <li>4564</li>
         <ul>
             <li><em>October 24</em> - <strong>Hannah Helda Petersen</strong> has died</li>
+        </ul>
+
+        <li>4569</li>
+        <ul>
+            <li><em>September 11</em> - <strong>L. M. Hoffe</strong> discovered light can be converted into magical energy.</li>
+        </ul>
+
+        <li>4571</li>
+        <ul>
+            <li><em>May 23</em> - <strong>L. M. Hoffe</strong> has built his ever rotating Mages Square in Sorgros.</li>
+        </ul>
+
+        <li>4581</li>
+        <ul>
+            <li><em>September 4</em> - <strong>Z. C. Ganchev</strong> discovered how to convert light into any type of energy almost instantly.</li>
         </ul>
 
         <li>4585</li>
