Begining of 01 story

--- a/archmages/01.html
+++ b/archmages/01.html
@@ -23,5 +23,8 @@
     <p>
         <em>ArchMage:</em> 4470 August 20 - 4473 December 14 (3 years)
     </p>
+    <p>
+        <a href="01.full.html">Full Bio</a>
+    </p>
 </BODY>
 </HTML>
